// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput icon can be hidden 1`] = `
<v-text-field-stub
  append-icon=""
  browser-autocomplete="current-password"
  label="Password"
  name="password"
  prepend-icon="vpn_key"
  type="password"
  value=""
/>
`;

exports[`PasswordInput is rendered as custom vuetify text field 1`] = `
<v-text-field-stub
  append-icon="visibility"
  browser-autocomplete="current-password"
  label="Password"
  name="password"
  prepend-icon="vpn_key"
  type="password"
  value=""
/>
`;

exports[`PasswordInput renders properties sent by parent 1`] = `
<v-text-field-stub
  :solo="true"
  append-icon="visibility"
  browser-autocomplete="current-password"
  label="Password"
  name="password"
  prepend-icon="vpn_key"
  type="password"
  value=""
/>
`;
